//
// Protobuffer for device configuration
//

syntax = "proto3";

package config;

option go_package = ".;config";

message Value {
    uint32 id = 1;
    int32  int32Val = 2;
    int64  int64Val = 3;
    double doubleVal = 4;
    string stringVal = 5;
    bytes bytesVal = 6;
}

message Request {
    uint32 id = 1;
    uint32 command = 2;
    repeated Value values = 3;
}

message Response {
    uint32 id = 1;
    uint32 command = 2;
    uint32 sequence = 3;
    uint32 responseCode = 4;
    repeated Value values = 5;
}
